# rvgen

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
chipforge_inst_gen/: __init__.py  __main__.py  asm_program_gen.py  cli.py  config.py  gcc.py  iss.py  sequence.py  stream.py
chipforge_inst_gen/isa/: __init__.py  amo.py  base.py  bitmanip.py  compressed.py  crypto.py  csr_ops.py  csrs.py  enums.py  factory.py  filtering.py  floating_point.py  rv32a.py  rv32c.py  rv32d.py  rv32dc.py  rv32f.py  rv32fc.py  rv32i.py  rv32m.py  rv64a.py  rv64c.py  rv64d.py  rv64f.py  rv64i.py  rv64m.py  utils.py
chipforge_inst_gen/privileged/: boot.py  trap.py
chipforge_inst_gen/sections/: data_page.py  signature.py
chipforge_inst_gen/streams/: __init__.py  amo_streams.py  base.py  directed.py  loop.py
chipforge_inst_gen/targets/: __init__.py
research/: 01_targets_and_testlists.md  02_instr_pkg_enums.md  03_isa_class_hierarchy.md  04_asm_program_gen_flow.md  05_pygen_partial_port.md  06_run_py_and_iss.md  07_config_datapage_signature.md  08_directed_instr_libs.md  09_privileged_paging_pmp_debug.md  10_vector_cfg_and_cov.md  11_golden_fp_sfiles.md
scripts/: mcu_validate.sh
tests/unit/: test_amo.py  test_base.py  test_cli.py  test_config.py  test_csr_ops.py  test_csrs.py  test_enums.py  test_factory.py  test_filtering.py  test_seeding.py  test_sequence.py  test_stream.py  test_streams.py  test_targets.py  test_testlist.py  test_utils.py
